[package]
name = "check-tx"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-rpc-client = { workspace = true }
solana-transaction-status = { workspace = true }
bs58 = { workspace = true }
bincode = { workspace = true }
arrayref = { workspace = true }