[package]
name = "shared-mem-client"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/solana-stake-accounts"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
shared-mem = {workspace = true}
shared_memory = "0.12.4"
solana-account-decoder = { workspace = true }
solana-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-sdk = { workspace = true }
raw_sync = "0.1"
rand = "0.8"
futures = { workspace = true }
# hwloc = "0.5.0"
tokio = { workspace = true }
arrayref = { workspace = true }

borsh09 = { package = "borsh", version = "=0.9.3" }
borsh = { workspace = true }
dashmap = { workspace = true, features = ["rayon", "raw-api"] }
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
solana-measure = { workspace = true }
udp-proxy = { workspace = true }
solana-program = { workspace = true }
libc = "0.2.161"
spl-token = { workspace = true }
spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }
sha2 = { workspace = true }
thiserror = { workspace = true }
bs58 = { workspace = true }
# uint = { git = "https://github.com/raydium-io/parity-common", package = "uint" }
uint = "=0.9.5"
ruint = "1.3.0"
num-traits = "0.2.19"
decimal = {workspace = true}
anchor-lang = { path = "../anchor/lang" }
bytemuck = { version = "1.7", features = ["derive"] }
solana-faucet = { workspace = true}
solana-vote-program = {workspace = true}
solana-test-validator = { workspace = true }
solana-streamer = { workspace = true}
jupiter-perpetuals-cpi = { path = "../jupiter-perpetuals-cpi" }
rayon = "1.7"
solana-runtime = { workspace = true, features = ["dev-context-only-utils"] }
solana-runtime-transaction = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]