[package]
name = "shred-analyzer"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
solana-entry = { workspace = true }
solana-sdk = { workspace = true }
solana-ledger = { workspace = true }
assert_matches = { workspace = true }
bincode = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
