[package]
name = "udp-proxy"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
tokio = "1.29.1"
solana-sdk = { workspace = true }
bs58 = "0.4.0"
bincode = "1.3.3"
uuid = { version = "1.0", features = ["v4"] }
serde_json = "1.0.111"

# [workspace]


[lib]
name = "udp_proxy"